--- a/guide.html
+++ b/guide.html
@@ -272,7 +272,11 @@
             <p class="rot-priority-desc">Recast just before they fall off, or if <a href="https://www.wowhead.com/mop-classic/item=94524">Unerring Vision of Lei Shen</a> procs.</p>
           </li>
           <li>
-            <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> / <a href="https://www.wowhead.com/mop-classic/spell=110744">Divine Star</a> / <a href="https://www.wowhead.com/mop-classic/spell=121135">Cascade</a> — Use on cooldown with proper positioning.
+            <a href="https://www.wowhead.com/mop-classic/spell=73510">Mind Spike</a> — Only with a <a href="https://www.wowhead.com/mop-classic/spell=87160">Surge of Darkness</a> proc (<a href="https://www.wowhead.com/mop-classic/spell=109186">From Darkness, Comes Light</a>).
+            <p class="rot-priority-desc">Instant cast, high damage, does not consume your DoTs when talented.</p>
+          </li>
+          <li>
+            <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> — Use on cooldown with proper positioning.
             <p class="rot-priority-desc">
               <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> = 20+ yards away<br>
               <a href="https://www.wowhead.com/mop-classic/spell=110744">Divine Star</a> = Stacked in melee or to help healers<br>
