--- a/guide.html
+++ b/guide.html
@@ -253,16 +253,16 @@
         <p class="rot-subheading">Priority Order (highest → lowest):</p>
         <ol class="rot-priority">
           <li>
-            <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> — 3 Orbs only.
-            <p class="rot-priority-desc">Build orbs to spend on Devouring Plague. Never let orbs cap.</p>
+            <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> — 3 <a href="https://www.wowhead.com/mop-classic/spell=95740">Shadow Orbs</a> only.
+            <p class="rot-priority-desc">Build <a href="https://www.wowhead.com/mop-classic/spell=95740">Shadow Orbs</a> to spend on Devouring Plague. Never let <a href="https://www.wowhead.com/mop-classic/spell=95740">Shadow Orbs</a> cap.</p>
           </li>
           <li>
             <a href="https://www.wowhead.com/mop-classic/spell=8092">Mind Blast</a> — Use on cooldown.
-            <p class="rot-priority-desc">Main orb generator.</p>
+            <p class="rot-priority-desc">Main <a href="https://www.wowhead.com/mop-classic/spell=95740">Shadow Orb</a> generator.</p>
           </li>
           <li>
             <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> — Use both charges on cooldown.
-            <p class="rot-priority-desc">Strong execute. First charge generates 1 orb.</p>
+            <p class="rot-priority-desc">Strong execute. First charge generates 1 <a href="https://www.wowhead.com/mop-classic/spell=95740">Shadow Orb</a>.</p>
           </li>
           <li>
             <a href="https://www.wowhead.com/mop-classic/spell=129197">Mind Flay: Insanity</a> — Recast just before <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> expires to snapshot the channel.
