--- a/guide.html
+++ b/guide.html
@@ -236,7 +236,7 @@
         <!-- Opener -->
         <h3 class="rot-section-heading">Opener</h3>
         <ol class="rot-steps">
-          <li>Prepot at 2.5 and cast <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> from 25 yards away</li>
+          <li>Prepot <a href="https://www.wowhead.com/mop-classic/item=76093">Potion of the Jade Serpent</a> at 2.5s and cast <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> from 25 yards away</li>
           <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=73510">Mind Spike</a></li>
           <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=34433">Shadowfiend</a></li>
           <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=26297">Berserking</a> and <a href="https://www.wowhead.com/mop-classic/spell=96228">Synapse Springs</a></li>
@@ -258,30 +258,23 @@
           </li>
           <li>
             <a href="https://www.wowhead.com/mop-classic/spell=8092">Mind Blast</a> — Use on cooldown.
-            <p class="rot-priority-desc">Main <a href="https://www.wowhead.com/mop-classic/spell=95740">Shadow Orb</a> generator.</p>
           </li>
           <li>
             <a href="https://www.wowhead.com/mop-classic/spell=32379">Shadow Word: Death</a> — Use both charges on cooldown.
-            <p class="rot-priority-desc">Strong execute. First charge generates 1 <a href="https://www.wowhead.com/mop-classic/spell=95740">Shadow Orb</a>.</p>
           </li>
           <li>
             <a href="https://www.wowhead.com/mop-classic/spell=129197">Mind Flay: Insanity</a> — Recast just before <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> expires to snapshot the channel.
           </li>
           <li>
-            <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> / <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> — Maintain 95% uptime.
+            <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> / <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> — Aim for 100% uptime.
             <p class="rot-priority-desc">Recast just before they fall off, or if <a href="https://www.wowhead.com/mop-classic/item=94524">Unerring Vision of Lei Shen</a> procs.</p>
           </li>
           <li>
-            <a href="https://www.wowhead.com/mop-classic/spell=73510">Mind Spike</a> — Only with a <a href="https://www.wowhead.com/mop-classic/spell=87160">Surge of Darkness</a> proc (<a href="https://www.wowhead.com/mop-classic/spell=109186">From Darkness, Comes Light</a>).
+            <a href="https://www.wowhead.com/mop-classic/spell=73510">Mind Spike</a> — Only with <a href="https://www.wowhead.com/mop-classic/spell=109186">From Darkness, Comes Light</a>.
             <p class="rot-priority-desc">Instant cast, high damage, does not consume your DoTs when talented.</p>
           </li>
           <li>
-            <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> — Use on cooldown with proper positioning.
-            <p class="rot-priority-desc">
-              <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> = 20+ yards away<br>
-              <a href="https://www.wowhead.com/mop-classic/spell=110744">Divine Star</a> = Stacked in melee or to help healers<br>
-              <a href="https://www.wowhead.com/mop-classic/spell=121135">Cascade</a> = Targets are spread out
-            </p>
+            <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> — Use on cooldown with proper positioning (20+ yards).
           </li>
           <li>
             <a href="https://www.wowhead.com/mop-classic/spell=15407">Mind Flay</a> — Standard filler.
