--- a/guide.html
+++ b/guide.html
@@ -236,8 +236,8 @@
         <!-- Opener -->
         <h3 class="rot-section-heading">Opener</h3>
         <ol class="rot-steps">
-          <li>Prepot <a href="https://www.wowhead.com/mop-classic/item=76093">Potion of the Jade Serpent</a> at 2.5s and cast <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> from 25 yards away</li>
-          <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=73510">Mind Spike</a></li>
+          <li><span class="rot-prepull-tag">Prepull</span> Use <a href="https://www.wowhead.com/mop-classic/item=76093">Potion of the Jade Serpent</a> at 2.5s on the countdown, then cast <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> from 25 yards — it hits the boss at pull for maximum damage</li>
+          <li><span class="rot-prepull-tag">Prepull</span> Cast <a href="https://www.wowhead.com/mop-classic/spell=73510">Mind Spike</a> — timed so it lands at 0 on the pull timer</li>
           <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=34433">Shadowfiend</a></li>
           <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=26297">Berserking</a> and <a href="https://www.wowhead.com/mop-classic/spell=96228">Synapse Springs</a></li>
           <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a></li>
