--- a/guide.html
+++ b/guide.html
@@ -117,13 +117,9 @@
         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="16 18 22 12 16 6"/><polyline points="8 6 2 12 8 18"/></svg>
         Macros
       </button>
-      <button class="guide-tab" data-tab="glyphs" role="tab" aria-selected="false">
-        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 20h9"/><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"/></svg>
-        Glyphs
-      </button>
-      <button class="guide-tab" data-tab="professions" role="tab" aria-selected="false">
-        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z"/></svg>
-        Professions
+      <button class="guide-tab" data-tab="stats" role="tab" aria-selected="false">
+        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>
+        Stats
       </button>
       <button class="guide-tab" data-tab="faq" role="tab" aria-selected="false">
         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><line x1="12" y1="17" x2="12.01" y2="17"/></svg>
@@ -344,32 +340,14 @@
       </div>
     </div>
 
-    <div class="guide-panel" data-panel="glyphs" role="tabpanel">
+    <div class="guide-panel" data-panel="stats" role="tabpanel">
       <div class="guide-panel-body">
         <h2 class="guide-panel-title">
-          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 20h9"/><path d="M16.5 3.5a2.121 2.121 0 0 1 3 3L7 19l-4 1 1-4L16.5 3.5z"/></svg>
-          Glyphs
+          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>
+          Stats
         </h2>
         <ul class="guide-list">
-          <li>Placeholder — Major: Glyph of Mind Flay — default for single-target fights.</li>
-          <li>Placeholder — Major: Glyph of Shadow Word: Death — execute phase damage increase.</li>
-          <li>Placeholder — Major: Glyph of Inner Sanctum — survivability for heavy damage encounters.</li>
-          <li>Placeholder — Swap glyphs per encounter; always carry a stack of Vanishing Powder.</li>
-        </ul>
-      </div>
-    </div>
-
-    <div class="guide-panel" data-panel="professions" role="tabpanel">
-      <div class="guide-panel-body">
-        <h2 class="guide-panel-title">
-          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z"/></svg>
-          Professions
-        </h2>
-        <ul class="guide-list">
-          <li>Placeholder — Engineering + Tailoring are the strongest combination for Shadow Priests.</li>
-          <li>Placeholder — Engineering: Synapse Springs glove tinker for on-use Intellect.</li>
-          <li>Placeholder — Tailoring: Lightweave Embroidery cloak enchant procs Intellect.</li>
-          <li>Placeholder — Alternatives: Blacksmithing (extra sockets), Jewelcrafting (better gems).</li>
+          <li>Placeholder stat priority content.</li>
         </ul>
       </div>
     </div>
