--- a/guide.html
+++ b/guide.html
@@ -231,9 +231,14 @@
         </h2>
         <!-- Opener -->
         <h3 class="rot-section-heading">Opener</h3>
+        <div class="rot-prepull-block">
+          <span class="rot-prepull-heading">Before the Pull</span>
+          <ul class="rot-prepull-list">
+            <li>Stand 25 yards away, use <a href="https://www.wowhead.com/mop-classic/item=76093">Potion of the Jade Serpent</a> at 2.5s on the pull timer, then cast <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a></li>
+            <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=73510">Mind Spike</a></li>
+          </ul>
+        </div>
         <ol class="rot-steps">
-          <li><span class="rot-prepull-tag">Prepull</span> Use <a href="https://www.wowhead.com/mop-classic/item=76093">Potion of the Jade Serpent</a> at 2.5s on the countdown, then cast <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> from 25 yards — it hits the boss at pull for maximum damage</li>
-          <li><span class="rot-prepull-tag">Prepull</span> Cast <a href="https://www.wowhead.com/mop-classic/spell=73510">Mind Spike</a> — timed so it lands at 0 on the pull timer</li>
           <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=34433">Shadowfiend</a></li>
           <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=26297">Berserking</a> and <a href="https://www.wowhead.com/mop-classic/spell=96228">Synapse Springs</a></li>
           <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a></li>
