--- a/guide.html
+++ b/guide.html
@@ -232,9 +232,9 @@
         <!-- Opener -->
         <h3 class="rot-section-heading">Opener</h3>
         <div class="rot-prepull-block">
-          <span class="rot-prepull-heading">Before the Pull</span>
+          <span class="rot-prepull-heading">Pre Pull</span>
           <ul class="rot-prepull-list">
-            <li>Stand 25 yards away, use <a href="https://www.wowhead.com/mop-classic/item=76093">Potion of the Jade Serpent</a> at 2.5s on the pull timer, then cast <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a></li>
+            <li>Stand 25 yards away, use <a href="https://www.wowhead.com/mop-classic/item=76093">Potion of the Jade Serpent</a> at 2.5s and cast <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a></li>
             <li>Cast <a href="https://www.wowhead.com/mop-classic/spell=73510">Mind Spike</a></li>
           </ul>
         </div>
