--- a/guide.html
+++ b/guide.html
@@ -250,8 +250,7 @@
         <p class="rot-note">Interrupt and recast <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> and <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> if <a href="https://www.wowhead.com/mop-classic/item=94524">Unerring Vision of Lei Shen</a> procs.</p>
 
         <!-- Priority -->
-        <h3 class="rot-section-heading">Spell Priority</h3>
-        <p class="rot-subheading">Priority Order (highest → lowest):</p>
+        <h3 class="rot-section-heading">Spell Priority (highest → lowest)</h3>
         <ol class="rot-priority">
           <li>
             <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a> — 3 <a href="https://www.wowhead.com/mop-classic/spell=95740">Shadow Orbs</a> only.
@@ -283,7 +282,7 @@
 
         <!-- DoT rule -->
         <div class="rot-rule">
-          ✅ Before casting <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a>, make sure <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> and <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> both have at least 8 seconds remaining — so you won't need to interrupt <a href="https://www.wowhead.com/mop-classic/spell=129197">Mind Flay: Insanity</a> to refresh them.
+          Before casting <a href="https://www.wowhead.com/mop-classic/spell=2944">Devouring Plague</a>, make sure <a href="https://www.wowhead.com/mop-classic/spell=589">Shadow Word: Pain</a> and <a href="https://www.wowhead.com/mop-classic/spell=34914">Vampiric Touch</a> both have at least 8 seconds remaining — so you won't need to interrupt <a href="https://www.wowhead.com/mop-classic/spell=129197">Mind Flay: Insanity</a> to refresh them.
         </div>
 
       </div>
