--- a/guide.html
+++ b/guide.html
@@ -275,8 +275,7 @@
             <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> — Use on cooldown with proper positioning (20+ yards).
           </li>
           <li>
-            <a href="https://www.wowhead.com/mop-classic/spell=15407">Mind Flay</a> — Standard filler.
-            <p class="rot-priority-desc">Interrupt early for higher priorities.</p>
+            <a href="https://www.wowhead.com/mop-classic/spell=15407">Mind Flay</a> — Interrupt early for higher priorities.
           </li>
         </ol>
 
