--- a/guide.html
+++ b/guide.html
@@ -304,8 +304,9 @@
 /use 14</code></pre>
             <p class="macro-desc">Pops all our major cooldowns at once.<br>
               <span class="macro-slots">
-                <span><code>/use 10</code> — Gloves (Synapse Springs)</span>
-                <span><code>/use 13</code> — Trinket Slot 1</span>
+                <span><code>/use 10</code> — Gloves (<a href="https://www.wowhead.com/mop-classic/spell=96228">Synapse Springs</a>)</span>
+                <span><code>/use 13</code> — Trinket 1</span>
+                <span><code>/use 14</code> — Trinket 2</span>
               </span>
             </p>
           </div>
@@ -316,7 +317,7 @@
 /cleartarget [dead][noharm]
 /targetenemy [noexists]
 /petattack</code></pre>
-            <p class="macro-desc">Casts Shadowfiend and forces it to attack your target. Automatically switches to a new enemy if your current target is already dead.</p>
+            <p class="macro-desc">Casts <a href="https://www.wowhead.com/mop-classic/spell=34433">Shadowfiend</a> and forces it to attack your target. Automatically switches to a new enemy if your current target is already dead.</p>
           </div>
           <div class="macro-card">
             <h3 class="macro-name">SWD</h3>
@@ -325,7 +326,7 @@
 /targetenemy [noexists]
 /cast [stance] Shadow Word: Death; [nostance] Shadowform
 /cast Shadow Word: Death</code></pre>
-            <p class="macro-desc">Ensures you're in Shadowform before casting. Automatically retargets a new enemy if your current target is dead — useful for sniping low-health adds like <a href="https://www.wowhead.com/mop-classic/npc=69232/ball-lightning">Ball Lightning</a>.</p>
+            <p class="macro-desc">Ensures you're in <a href="https://www.wowhead.com/mop-classic/spell=15473">Shadowform</a> before casting. Automatically retargets a new enemy if your current target is dead — useful for sniping low-health adds like <a href="https://www.wowhead.com/mop-classic/npc=69232/ball-lightning">Ball Lightning</a>.</p>
           </div>
           <div class="macro-card">
             <h3 class="macro-name">Tier 6 Talent</h3>
@@ -333,20 +334,20 @@
 /cast [talent:6/1]Cascade
 /cast [talent:6/2]Divine Star
 /cast [talent:6/3]Halo</code></pre>
-            <p class="macro-desc">Automatically uses whichever Level 90 talent you have selected, with the correct tooltip.</p>
+            <p class="macro-desc">Automatically uses whichever Level 90 talent you have selected — <a href="https://www.wowhead.com/mop-classic/spell=121135">Cascade</a>, <a href="https://www.wowhead.com/mop-classic/spell=110744">Divine Star</a>, or <a href="https://www.wowhead.com/mop-classic/spell=120517">Halo</a> — with the correct tooltip.</p>
           </div>
           <div class="macro-card">
             <h3 class="macro-name">Dispersion</h3>
             <pre class="macro-code"><code>#showtooltip Dispersion
 /cast Dispersion
 /cancelaura Dispersion</code></pre>
-            <p class="macro-desc">Press once to activate Dispersion, press again to cancel.</p>
+            <p class="macro-desc">Press once to activate <a href="https://www.wowhead.com/mop-classic/spell=47585">Dispersion</a>, press again to cancel.</p>
           </div>
           <div class="macro-card">
             <h3 class="macro-name">Feather</h3>
             <pre class="macro-code"><code>#showtooltip
 /cast [@player] Angelic Feather</code></pre>
-            <p class="macro-desc">Automatically places the feather at your feet.<br>If stacked in a group, step slightly away from others to make sure you still receive it.</p>
+            <p class="macro-desc">Automatically places <a href="https://www.wowhead.com/mop-classic/spell=121536">Angelic Feather</a> at your feet.<br>If stacked in a group, step slightly away from others to make sure you still receive it.</p>
           </div>
         </div>
       </div>
