--- a/guide.html
+++ b/guide.html
@@ -359,9 +359,47 @@
           <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>
           Stats
         </h2>
-        <ul class="guide-list">
-          <li>Placeholder stat priority content.</li>
-        </ul>
+        <div class="stats-grid">
+
+          <!-- T15 BiS -->
+          <div class="stats-block">
+            <h3 class="stats-block-heading">T15 BiS</h3>
+            <p class="stats-source">Source: <a href="https://www.wowsims.com/mop/priest/shadow/" target="_blank" rel="noopener">WowSims</a></p>
+            <table class="stats-table">
+              <thead>
+                <tr><th>Stat</th><th>Value</th><th></th></tr>
+              </thead>
+              <tbody>
+                <tr><td>Spell Power</td><td>41,909</td><td></td></tr>
+                <tr><td>Haste</td><td>15,294</td><td class="stats-pct">42.79%</td></tr>
+                <tr><td>Hit</td><td>5,123</td><td class="stats-pct">15.07%</td></tr>
+                <tr><td>Crit</td><td>3,545</td><td class="stats-pct">21.62%</td></tr>
+                <tr><td>Mastery</td><td>9,564</td><td class="stats-pct">43.09%</td></tr>
+              </tbody>
+            </table>
+            <p class="stats-note">Crit is intentionally low — <a href="https://www.wowhead.com/mop-classic/item=94524">Unerring Vision of Lei Shen</a> grants 100% crit chance on proc.</p>
+          </div>
+
+          <!-- Stat Weights -->
+          <div class="stats-block">
+            <h3 class="stats-block-heading">Stat Weights (EP)</h3>
+            <table class="stats-table">
+              <thead>
+                <tr><th>Stat</th><th>EP Value</th></tr>
+              </thead>
+              <tbody>
+                <tr class="stats-row-highlight"><td>Intellect</td><td>1.00</td></tr>
+                <tr><td>Spell Power</td><td>0.98</td></tr>
+                <tr><td>Spirit</td><td>0.90</td></tr>
+                <tr><td>Haste</td><td>0.75</td></tr>
+                <tr><td>Hit</td><td>0.85</td></tr>
+                <tr><td>Mastery</td><td>0.51</td></tr>
+                <tr><td>Crit</td><td>0.49</td></tr>
+              </tbody>
+            </table>
+          </div>
+
+        </div>
       </div>
     </div>
 
