--- a/guide.html
+++ b/guide.html
@@ -121,10 +121,6 @@
         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polyline points="22 12 18 12 15 21 9 3 6 12 2 12"/></svg>
         Stats
       </button>
-      <button class="guide-tab" data-tab="faq" role="tab" aria-selected="false">
-        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><line x1="12" y1="17" x2="12.01" y2="17"/></svg>
-        FAQ
-      </button>
       <button class="guide-tab" data-tab="tot-tips" role="tab" aria-selected="false">
         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M2 3h6a4 4 0 0 1 4 4v14a3 3 0 0 0-3-3H2z"/><path d="M22 3h-6a4 4 0 0 0-4 4v14a3 3 0 0 1 3-3h7z"/></svg>
         T15 Tips
@@ -317,7 +313,7 @@
 /cleartarget [dead][noharm]
 /targetenemy [noexists]
 /petattack</code></pre>
-            <p class="macro-desc">Casts <a href="https://www.wowhead.com/mop-classic/spell=34433">Shadowfiend</a> and forces it to attack your target. If your current target is already dead, pressing it again automatically switches to a new enemy.</p>
+            <p class="macro-desc">Casts <a href="https://www.wowhead.com/mop-classic/spell=34433">Shadowfiend</a> and forces it to attack your target.</p>
           </div>
           <div class="macro-card">
             <h3 class="macro-name">SWD</h3>
@@ -364,13 +360,12 @@
           <!-- T15 BiS -->
           <div class="stats-block">
             <h3 class="stats-block-heading">T15 BiS</h3>
-            <p class="stats-source">Source: <a href="https://www.wowsims.com/mop/priest/shadow/" target="_blank" rel="noopener">WowSims</a></p>
+            <p class="stats-source">Source: <a href="https://www.wowsims.com/mop/priest/shadow/" target="_blank" rel="noopener"><img src="https://www.wowsims.com/assets/WoW-Simulator-Icon-0WxURMuu.png" alt="WoWSims" class="stats-source-icon">WowSims</a></p>
             <table class="stats-table">
               <thead>
                 <tr><th>Stat</th><th>Value</th><th></th></tr>
               </thead>
               <tbody>
-                <tr><td>Spell Power</td><td>41,909</td><td></td></tr>
                 <tr><td>Haste</td><td>15,294</td><td class="stats-pct">42.79%</td></tr>
                 <tr><td>Hit</td><td>5,123</td><td class="stats-pct">15.07%</td></tr>
                 <tr><td>Crit</td><td>3,545</td><td class="stats-pct">21.62%</td></tr>
@@ -403,20 +398,6 @@
       </div>
     </div>
 
-    <div class="guide-panel" data-panel="faq" role="tabpanel">
-      <div class="guide-panel-body">
-        <h2 class="guide-panel-title">
-          <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><line x1="12" y1="17" x2="12.01" y2="17"/></svg>
-          FAQ
-        </h2>
-        <ul class="guide-list">
-          <li>Placeholder — What's the best pre-pot for Shadow Priest? Jade Serpent Potion, used 1 second before pull.</li>
-          <li>Placeholder — Should I use Dispersion on cooldown? Use it during movement phases to regenerate mana without losing uptime.</li>
-          <li>Placeholder — What DoT uptime should I aim for? 95%+ on SW:P and VT — track with WeakAuras.</li>
-          <li>Placeholder — Multi-dot padding vs priority damage? Communicate with your raid leader on fight-by-fight basis.</li>
-        </ul>
-      </div>
-    </div>
 
     <div class="guide-panel" data-panel="tot-tips" role="tabpanel">
       <div class="guide-panel-body">
