--- a/guide.html
+++ b/guide.html
@@ -65,7 +65,7 @@
           </a>
         </li>
         <li>
-          <a href="http://youtube.com/@skimmynz" target="_blank" rel="noopener">
+          <a href="https://youtube.com/@skimmynz" target="_blank" rel="noopener">
             <svg class="nav-icon" viewBox="0 0 24 24" fill="currentColor"><path d="M23.498 6.186a3.016 3.016 0 0 0-2.122-2.136C19.505 3.545 12 3.545 12 3.545s-7.505 0-9.377.505A3.017 3.017 0 0 0 .502 6.186C0 8.07 0 12 0 12s0 3.93.502 5.814a3.016 3.016 0 0 0 2.122 2.136c1.871.505 9.376.505 9.376.505s7.505 0 9.377-.505a3.015 3.015 0 0 0 2.122-2.136C24 15.93 24 12 24 12s0-3.93-.502-5.814zM9.545 15.568V8.432L15.818 12l-6.273 3.568z"/></svg>
             YouTube
           </a>
@@ -144,7 +144,7 @@
             </div>
             <div class="talent-tier-text">
               <strong class="talent-explain-name"><a href="https://www.wowhead.com/mop-classic/spell=108920">Void Tendrils</a></strong>
-              <p>Useful for dealing with <a href="https://www.wowhead.com/mop-classic/spell=137203">Blessed Loa Spirit</a> and <a href="https://www.wowhead.com/npc=69013">Diffused Lightning</a>.</p>
+              <p>Useful for dealing with <a href="https://www.wowhead.com/mop-classic/spell=137203">Blessed Loa Spirit</a> and <a href="https://www.wowhead.com/mop-classic/npc=69013">Diffused Lightning</a>.</p>
             </div>
           </div>
 
@@ -386,8 +386,8 @@
                 <tr class="stats-row-highlight"><td>Intellect</td><td>1.00</td></tr>
                 <tr><td>Spell Power</td><td>0.98</td></tr>
                 <tr><td>Spirit</td><td>0.90</td></tr>
-                <tr><td>Haste</td><td>0.75</td></tr>
                 <tr><td>Hit</td><td>0.85</td></tr>
+                <tr><td>Haste</td><td>0.75</td></tr>
                 <tr><td>Mastery</td><td>0.51</td></tr>
                 <tr><td>Crit</td><td>0.49</td></tr>
               </tbody>
@@ -646,6 +646,8 @@
       });
     });
 
+    var svgCopy = '<svg width="11" height="11" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" style="flex-shrink:0"><rect x="9" y="9" width="13" height="13" rx="2"/><path d="M5 15H4a2 2 0 0 1-2-2V4a2 2 0 0 1 2-2h9a2 2 0 0 1 2 2v1"/></svg>';
+    var svgCheck = '<svg width="11" height="11" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" style="flex-shrink:0"><polyline points="20 6 9 17 4 12"/></svg>';
     document.querySelectorAll('.macro-code').forEach(function(pre) {
       var wrap = document.createElement('div');
       wrap.className = 'macro-code-wrap';
@@ -653,16 +655,22 @@
       wrap.appendChild(pre);
       var btn = document.createElement('button');
       btn.className = 'macro-copy-btn';
-      btn.textContent = 'Copy';
+      btn.innerHTML = svgCopy + ' Copy';
       btn.addEventListener('click', function() {
         var text = (pre.querySelector('code') || pre).innerText;
         navigator.clipboard.writeText(text).then(function() {
-          btn.textContent = 'Copied!';
+          btn.innerHTML = svgCheck + ' Copied!';
           btn.classList.add('copied');
-          setTimeout(function() { btn.textContent = 'Copy'; btn.classList.remove('copied'); }, 2000);
+          setTimeout(function() { btn.innerHTML = svgCopy + ' Copy'; btn.classList.remove('copied'); }, 2000);
         });
       });
       wrap.insertBefore(btn, pre);
+    });
+    document.querySelectorAll('.macro-code code').forEach(function(code) {
+      var html = code.innerHTML;
+      html = html.replace(/(\/\w+)/g, '<span class="mc-cmd">$1</span>');
+      html = html.replace(/(\[[^\]]+\])/g, '<span class="mc-cond">$1</span>');
+      code.innerHTML = html;
     });
 
     var expandBtn = document.getElementById('bossExpandAll');
